@@ -75,6 +75,8 @@ because of Phabricator reports.
 * …
 
 === Breaking changes in 1.35 ===
+* The mediawiki.RegExp module alias, deprecated in 1.34, was removed.
+  Use the mediawiki.util module instead.
 * …
 
 === Deprecations in 1.35 ===
